# CPP_Labs

./: CMakeLists.txt  main.cpp
field/exceptions/: outOfBounds.h
field/hdr/: field.h
field/src/: field.cpp
gem/base_gem/hdr/: base_gem.h
gem/base_gem/src/: base_gem.cpp
gem/bomb/hdr/: bomb.h
gem/bomb/src/: bomb.cpp
gem/recolor/hdr/: recolor.h
gem/recolor/src/: recolor.cpp
gem/swap/hdr/: swap.h
gem/swap/src/: swap.cpp
lab2/: main.cpp
lab2/equations/: float_coeffs.txt  int_coeffs.txt
lab2/exceptions/: no_real_roots_exc.h  no_teacher_assigned_exc.h
lab2/pupils/: bad_pupil.h  base_pupil.cpp  base_pupil.h  good_pupil.h  normal_pupil.cpp  normal_pupil.h
lab2/solution/: solution.h
lab2/teacher/: teacher.cpp  teacher.h
marker/hdr/: marker.h
tile/hdr/: tile.h
tile/src/: tile.cpp
